<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.pepivsky.platzigram.LoginActivity"
    android:background="@color/colorPrimary"
    >


    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.6"
            >

            <ImageView
                android:id="@+id/logo"
                android:layout_width="200dp"
                android:layout_height="80dp"
                android:layout_centerInParent="true"
                android:background="@drawable/platzigram"
                android:onClick="goWeb"

                />

        </RelativeLayout>



        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:layout_weight="0.4"
            >



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/padding_horizontal_login"


                >

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/EditTextWhite"

                    >
                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_nombre_usuario"
                        />

                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/EditTextWhite"

                    >
                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_password"
                        android:inputType="textPassword"
                        />
                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/btnlogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/texto_boton_login"
                    android:theme="@style/RaisedButtonDark"
                    android:onClick="irLogin"

                    />


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    >

                    <TextView
                        android:id="@+id/dontHaveAccount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/no_tengo_cuenta"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/textsize_no_tengo_cuenta"

                        />

                    <TextView
                        android:id="@+id/createHere"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/create_here"
                        android:textStyle="bold"
                        android:textColor="@android:color/white"
                        android:layout_toRightOf="@id/dontHaveAccount"
                        android:onClick="irCrearCuenta"
                        android:textSize="@dimen/textsize_no_tengo_cuenta"

                        />



                </RelativeLayout>

            </LinearLayout>
        </ScrollView>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
