<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.pepivsky.platzigram.view.PictureDetailActivity">

    <!-- AppBarLayout es como un linearlayout dentro de un toolbar. -->
    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="256dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <!-- Collapsing toolbar todo lo que esté dentro se colapsará. -->
        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/collpasingToolbar"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="@color/colorPrimary"
            >
            <!-- ScrollFlags da el efecto de collapso/ y contentScrim le da el color al hacer efecto -->

            <ImageView
                android:id="@+id/ImageHeader"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:background="@drawable/image"
                app:layout_collapseMode="parallax"
                android:transitionName="@string/transitionname_picture"
                />
            <!-- Scale type para ajustar la imagen/ Collapse Mode le da el efecto de movimiento -->

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:layout_collapseMode="pin"
                />
            <!-- collapseMode para que el toolbar esté fijo al hacer el efecto -->

        </android.support.design.widget.CollapsingToolbarLayout>



    </android.support.design.widget.AppBarLayout>

    <!-- NestedScrollView sirve para que nos permita hacer scroll a los elementos que estén adentro -->
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >
        <!-- La propiedad layout-behavior sirve para que los elementos respeten la ubicación del Toolbar y no se encimen -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="@dimen/activity_vertical_margin"
            >

            <TextView
                android:id="@+id/userNameDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textsize_usernamedetail"
                android:text="@string/userNameCard"
                android:paddingLeft="@dimen/padding_horizontal_login"
                android:paddingRight="@dimen/activity_vertical_margin"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/padding_horizontal_login"
                android:paddingRight="@dimen/padding_horizontal_login"
                >
                <TextView
                    android:id="@+id/likeNumberDetail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/textsize_likenumberdetail"
                    android:text="10"
                    />

                <TextView
                    android:id="@+id/secondWordDetail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/textsize_likenumberdetail"
                    android:text="@string/secondworddetail"
                    android:layout_marginLeft="@dimen/marginleft_secondword"
                    />

            </LinearLayout>

            <!-- Divider -->
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_divder"
                android:background="@android:color/darker_gray"
                >
            </View>

            <TextView
                android:id="@+id/titleImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textsize_likenumberdetail"
                android:text="@string/titleimagedetail"
                android:layout_gravity="center_horizontal"
                android:textStyle="bold"
                android:paddingTop="@dimen/padding_topimagedetail"
                />

            <TextView
                android:id="@+id/textContentImageDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textsize_likenumberdetail"
                android:text="@string/lorem"
                android:layout_gravity="center_horizontal"
                android:textStyle="bold"
                android:paddingTop="@dimen/padding_topimagedetail"
                android:paddingLeft="@dimen/padding_horizontal_textcontentdetail"
                android:paddingRight="@dimen/padding_horizontal_textcontentdetail"
                />



        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@drawable/heart"
        app:layout_anchor="@+id/appBar"
        app:layout_anchorGravity="bottom|end"
        /> <!-- layout anchor para acomodar el boton debajo de appbar -->



</android.support.design.widget.CoordinatorLayout>